# anki-study-report

./: .dockerignore  .gitattributes  .gitignore  .r7-acceptance-execution-trigger-v2  .r7-acceptance-execution-trigger-v3  .r7-acceptance-execution-trigger-v4  .r7-acceptance-execution-trigger-v5  .r7-acceptance-execution-trigger-v7  .r7-acceptance-trigger  .r7-cards-history-trigger  .r7-css-sentinel-trigger  .r7-execution-history-trigger  .r7-execution-target-trigger  .r7-execution-trigger  .r7-profile-smoke-trigger  .r7-roadmap-trigger  .stage9-finalize-trigger  .stage9-trigger  ANKI_STUDY_REPORT_STATUS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build_ankiaddon.ps1  requirements-dev.txt
research/gamification-sim/: .gitignore  README.md  pyproject.toml
research/gamification-sim/configs/: review-longitudinal-v0.1.json  review-sweep-v0.1.json
research/gamification-sim/contracts/: fsrs-trajectories-v0.1.json  review-cycling-diagnostic-v1.json  review-xp-candidate-protocol-v1.json  rust-oracle-v0.1.md
research/gamification-sim/environment/: README.md  python-windows-amd64-py311.json  python-windows-amd64-py311.lock.txt  rust-windows-host.json
research/gamification-sim/evidence/: README.md  g0.7-windows-amd64-py311-rust-1.97.1.json  g1.2-root-cause-attribution-v1.json
research/gamification-sim/fixtures/: golden_cases.json
research/gamification-sim/functional/: README.md  windows-amd64-py311-rust-1.97.1.json
research/gamification-sim/personas/: P01_NEW_SMALL.json  P02_BEGINNER_REGULAR.json  P03_MATURE_CONSISTENT.json  P04_HIGH_VOLUME.json  P05_SMALL_MATURE_COLLECTION.json  P06_BACKLOG_RETURN.json  P07_IRREGULAR_SCHEDULE.json  P08_NO_FSRS.json  P09_LOW_CONFIDENCE_FSRS.json  P10_HIGH_RETENTION.json  P11_LOW_RETENTION.json  P12_MULTI_DEVICE.json  P13_HEAVY_LAPSE.json  P14_AUDIO_AND_LONG_PROMPTS.json  P15_FILTERED_EXAM_PREP.json  P16_ZERO_DUE.json
research/gamification-sim/rust-oracle/: Cargo.toml
research/gamification-sim/schemas/: review-cycling-attribution-v1.schema.json  review-cycling-diagnostic-v1.schema.json  review-longitudinal-v0.1.schema.json  review-persona-v0.1.schema.json  review-scenario-v0.1.schema.json  review-scenario-v0.2.schema.json  review-sweep-v0.1.schema.json  review-xp-candidate-protocol-v1.schema.json
research/gamification-sim/tests/: conftest.py  test_assertions.py  test_cli.py  test_comparisons.py  test_day_aggregation.py  test_diagnostic_attribution.py  test_episode_reward.py  test_evidence.py  test_fsrs_reference.py  test_golden_cases.py  test_invariants.py  test_longitudinal_config.py  test_sweep.py  (+15 more)
(+741 files in other folders)
