[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gamification-sim"
version = "0.1.0"
description = "Isolated deterministic Review XP research simulator core"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "GPL-3.0-only"}
authors = [{name = "Anki Study Report contributors"}]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8,<10"]

[project.scripts]
gamification-sim = "gamification_sim.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
