# Recovery status: RECOVERED_UNVERIFIED
# Frozen source: 48298d02c6871df0ffa112d862d9b2af629c523f:research/gamification-sim/pyproject.toml
# Dependency status: exact historical declarations recovered; compatibility is evaluated in G0.5.
# G0.4 changed no dependency names, versions, extras, build settings, or metadata below.

[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "gamification-sim"
version = "0.1.0"
description = "Isolated deterministic Review XP research simulator core"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-only"
authors = [{name = "Anki Study Report contributors"}]
dependencies = ["jsonschema>=4.26,<5"]

[project.optional-dependencies]
test = ["pytest>=8,<10", "hypothesis>=6.156.6,<7"]
fsrs = ["fsrs==6.3.1"]

[project.scripts]
gamification-sim = "gamification_sim.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
